--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tianyigps.xiepeng">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--<uses-permission android:name="android.permission.GET_TASKS" />-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+    <!--拨打电话-->
+    <!--<uses-permission android:name="android.permission.CALL_PHONE" />-->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launch"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="bNDyc20oA1AfGZdNxvI7NSdAIUeh0lyr" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +33,8 @@
         </activity>
         <activity android:name=".base.BaseActivity" />
         <activity android:name=".activity.WorkerFragmentContentActivity" />
-        <activity android:name=".activity.ManagerFragmentContentActivity"/>
+        <activity android:name=".activity.ManagerFragmentContentActivity" />
+        <activity android:name=".activity.LocateActivity"></activity>
     </application>
 
 </manifest>
