--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tianyigps.xiepeng">
+          package="com.tianyigps.xiepeng">
 
     <!-- 百度地图权限 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <!-- <uses-permission android:name="android.permission.GET_TASKS" /> -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
 
     <!-- 百度定位权限 -->
     <!-- 这个权限用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- 这个权限用于访问GPS定位 -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
     <!-- <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> -->
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
@@ -31,10 +31,10 @@
     <!-- 访问网络，网络定位需要上网 -->
     <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
     <!-- SD卡读取权限，用户写入离线定位数据 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <!-- 相机权限 -->
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -44,31 +44,35 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="bNDyc20oA1AfGZdNxvI7NSdAIUeh0lyr" />
+            android:value="bNDyc20oA1AfGZdNxvI7NSdAIUeh0lyr"/>
 
         <activity android:name=".SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".base.BaseActivity" />
-        <activity android:name=".activity.WorkerFragmentContentActivity" />
-        <activity android:name=".activity.ManagerFragmentContentActivity" />
-        <activity android:name=".activity.LocateActivity" />
-        <activity android:name=".activity.OrderDetailsActivity" />
+        <activity android:name=".base.BaseActivity"/>
+        <activity android:name=".activity.WorkerFragmentContentActivity"/>
+        <activity android:name=".activity.ManagerFragmentContentActivity"/>
+        <activity android:name=".activity.LocateActivity"/>
+        <activity android:name=".activity.OrderDetailsActivity"/>
 
         <!-- 百度定位服务 -->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote" />
+            android:process=":remote"/>
 
-        <activity android:name=".activity.ScannerActivity" />
-        <activity android:name=".activity.ModifyPasswordActivity" />
-        <activity android:name=".activity.StatisticsActivity" />
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.ScannerActivity"/>
+        <activity android:name=".activity.ModifyPasswordActivity"/>
+        <activity android:name=".activity.StatisticsActivity"/>
+        <activity android:name=".activity.LoginActivity"/>
+        <activity android:name=".activity.CustomSignActivity">
+        </activity>
+        <activity android:name=".activity.EditRemarksActivity">
+        </activity>
     </application>
 
 </manifest>
