--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,8 @@
         </activity>
         <activity android:name=".activity.EditRemarksActivity">
         </activity>
+        <activity android:name=".activity.InstallingAcvitity">
+        </activity>
     </application>
 
 </manifest>
