--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,10 @@
         </activity>
         <activity android:name=".activity.OperateInstallActivity">
         </activity>
+        <activity android:name=".activity.OperateRemoveActivity">
+        </activity>
+        <activity android:name=".activity.OperateRepairActivity">
+        </activity>
     </application>
 
 </manifest>
