--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,13 @@ dependencies {
     })
     compile(name: 'signviewlibrary', ext: 'aar')
     compile(name: 'cycleprogressview', ext: 'aar')
+    compile(name: 'bottomdialog', ext: 'aar')
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    testCompile 'junit:junit:4.12'
 }
