--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.yanzhenjie:permission:1.0.8'
+    compile 'com.zxy.android:tiny:0.0.6'
     testCompile 'junit:junit:4.12'
 }
