--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,9 @@
         </activity>
         <activity android:name=".activity.InstallingActivity">
         </activity>
-        <activity android:name=".activity.OperateInstallActivity">
+        <activity
+            android:name=".activity.OperateInstallActivity"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".activity.OperateRemoveActivity">
         </activity>
