--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,8 @@
         </activity>
         <activity android:name=".activity.OperateRepairActivity">
         </activity>
+        <activity android:name=".activity.ChoiceWorkerActivity">
+        </activity>
     </application>
 
 </manifest>
