小红点控件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile(name: 'signviewlibrary', ext: 'aar')
     compile(name: 'cycleprogressview', ext: 'aar')
     compile(name: 'bottomdialog', ext: 'aar')
+    compile 'q.rorbin:badgeview:1.1.2'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
