--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,6 +87,8 @@
         </activity>
         <activity android:name=".activity.OrderTrackActivity">
         </activity>
+        <activity android:name=".activity.PendingDetailsActivity">
+        </activity>
     </application>
 
 </manifest>
