--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
         </activity>
         <activity android:name=".activity.OrderTrackActivity">
         </activity>
-        <activity android:name=".activity.PendingDetailsActivity">
+        <activity android:name=".activity.PendDetailsActivity">
         </activity>
     </application>
 
