--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.yanzhenjie:permission:1.0.8'
     compile 'com.zxy.android:tiny:0.0.6'
     testCompile 'junit:junit:4.12'
+    compile files('libs/jcore-android-1.1.6.jar')
 }
