--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tianyigps.dispatch2">
+    package="com.tianyigps.dispatch2">
 
-    <!--极当推送-->
+    <!-- 极当推送 -->
     <!-- Required -->
     <permission
         android:name="com.tianyigps.dispatch2.permission.JPUSH_MESSAGE"
-        android:protectionLevel="signature"/>
-    <uses-permission android:name="com.tianyigps.dispatch2.permission.JPUSH_MESSAGE"/>
-    <!--监听解锁手机-->
-    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT"/>
-    <!--震动-->
-    <uses-permission android:name="android.permission.VIBRATE"/>
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.tianyigps.dispatch2.permission.JPUSH_MESSAGE" />
+    <!-- 监听解锁手机 -->
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
+    <!-- 震动 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
     <!-- Required -->
 
+
     <!-- 百度地图权限 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- <uses-permission android:name="android.permission.GET_TASKS" /> -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- 百度定位权限 -->
     <!-- 这个权限用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!-- 这个权限用于访问GPS定位 -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
     <!-- <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> -->
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
@@ -43,10 +45,10 @@
     <!-- 访问网络，网络定位需要上网 -->
     <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
     <!-- SD卡读取权限，用户写入离线定位数据 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <!-- 相机权限 -->
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -56,111 +58,122 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="JPUSH_APPKEY"
-            android:value="310a52ab22b1eb7861f9cc2e"/>
+            android:value="310a52ab22b1eb7861f9cc2e" />
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="bNDyc20oA1AfGZdNxvI7NSdAIUeh0lyr"/>
+            android:value="bNDyc20oA1AfGZdNxvI7NSdAIUeh0lyr" />
 
-        <activity android:name="com.tianyigps.dispatch2.SplashActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.tianyigps.dispatch2.base.BaseActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.WorkerFragmentContentActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.ManagerFragmentContentActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.LocateActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.OrderDetailsActivity"/>
+        <activity android:name=".base.BaseActivity" />
+        <activity android:name=".activity.WorkerFragmentContentActivity" />
+        <activity android:name=".activity.ManagerFragmentContentActivity" />
+        <activity android:name=".activity.LocateActivity" />
+        <activity android:name=".activity.OrderDetailsActivity" />
 
         <!-- 百度定位服务 -->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"/>
+            android:process=":remote" />
 
-        <activity android:name="com.tianyigps.dispatch2.activity.ScannerActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.ModifyPasswordActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.StatisticsActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.LoginActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.CustomSignActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.EditRemarksActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.InstallingActivity"/>
+        <activity android:name=".activity.ScannerActivity" />
+        <activity android:name=".activity.ModifyPasswordActivity" />
+        <activity android:name=".activity.StatisticsActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.CustomSignActivity" />
+        <activity android:name=".activity.EditRemarksActivity" />
+        <activity android:name=".activity.InstallingActivity" />
         <activity
-            android:name="com.tianyigps.dispatch2.activity.OperateInstallActivity"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.OperateRemoveActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.OperateRepairActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.ChoiceWorkerActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.OrderTrackActivity"/>
-        <activity android:name="com.tianyigps.dispatch2.activity.PendDetailsActivity"/>
+            android:name=".activity.OperateInstallActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.OperateRemoveActivity" />
+        <activity android:name=".activity.OperateRepairActivity" />
+        <activity android:name=".activity.ChoiceWorkerActivity" />
+        <activity android:name=".activity.OrderTrackActivity" />
+        <activity android:name=".activity.PendDetailsActivity" />
 
-        <!--极光推送-->
-        <!-- Required SDK 核心功能-->
+        <!-- 极光推送 -->
+        <!-- Required SDK 核心功能 -->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
         <service
             android:name="cn.jpush.android.service.PushService"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTER"/>
-                <action android:name="cn.jpush.android.intent.REPORT"/>
-                <action android:name="cn.jpush.android.intent.PushService"/>
-                <action android:name="cn.jpush.android.intent.PUSH_TIME"/>
+                <action android:name="cn.jpush.android.intent.REGISTER" />
+                <action android:name="cn.jpush.android.intent.REPORT" />
+                <action android:name="cn.jpush.android.intent.PushService" />
+                <action android:name="cn.jpush.android.intent.PUSH_TIME" />
             </intent-filter>
         </service>
+
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true">
             <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY"/>
-                <category android:name="com.tianyigps.dispatch2"/>
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
+
+                <category android:name="com.tianyigps.dispatch2" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.USER_PRESENT"/>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
             <!-- Optional -->
             <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_ADDED"/>
-                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
 
-                <data android:scheme="package"/>
+                <data android:scheme="package" />
             </intent-filter>
         </receiver>
-        <!-- Required SDK核心功能-->
-        <!--<service-->
-        <!--android:name="cn.jpush.android.service.DownloadService"-->
-        <!--android:enabled="true"-->
-        <!--android:exported="false" >-->
-        <!--</service>-->
-        <receiver android:name="cn.jpush.android.service.AlarmReceiver"/>
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
+        <!-- <service -->
+        <!-- android:name="cn.jpush.android.service.DownloadService" -->
+        <!-- android:enabled="true" -->
+        <!-- android:exported="false" > -->
+        <!-- </service> -->
+        <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
+        <!-- Required SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
             android:exported="false"
             android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
-                <action android:name="cn.jpush.android.ui.PushActivity"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="com.tianyigps.dispatch2"/>
+                <action android:name="cn.jpush.android.ui.PushActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.tianyigps.dispatch2" />
             </intent-filter>
         </activity>
-        <!-- SDK核心功能-->
+        <!-- SDK核心功能 -->
         <activity
             android:name="cn.jpush.android.ui.PopWinActivity"
             android:configChanges="orientation|keyboardHidden"
             android:exported="false"
             android:theme="@style/MyDialogStyle">
             <intent-filter>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="com.tianyigps.dispatch2"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.tianyigps.dispatch2" />
             </intent-filter>
         </activity>
 
-
+        <receiver
+            android:name=".receiver.OpenActivityReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" />
+                <category android:name="com.tianyigps.dispatch2" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
