--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile(name: 'bottomdialog', ext: 'aar')
     compile 'q.rorbin:badgeview:1.1.2'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.2'
+    compile 'me.dm7.barcodescanner:zbar:1.9.7'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
