--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,22 +94,43 @@
             android:enabled="true"
             android:process=":remote"/>
 
-        <activity android:name=".activity.ScannerActivity"/>
-        <activity android:name=".activity.ModifyPasswordActivity"/>
-        <activity android:name=".activity.StatisticsActivity"/>
+        <activity
+            android:name=".activity.ScannerActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.ModifyPasswordActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.StatisticsActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.LoginActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".activity.CustomSignActivity"/>
-        <activity android:name=".activity.EditRemarksActivity"/>
-        <activity android:name=".activity.InstallingActivity"/>
+        <activity
+            android:name=".activity.CustomSignActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.EditRemarksActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.InstallingActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.OperateInstallActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".activity.OperateRemoveActivity"/>
-        <activity android:name=".activity.OperateRepairActivity"/>
-        <activity android:name=".activity.ChoiceWorkerActivity"/>
-        <activity android:name=".activity.OrderTrackActivity"/>
+        <activity
+            android:name=".activity.OperateRemoveActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.OperateRepairActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.ChoiceWorkerActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.OrderTrackActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.PendDetailsActivity"
             android:screenOrientation="portrait"/>
