修复上传图片时，造成的图片错位（原因是压缩图片是个耗时操作，需要放在回调里）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -208,9 +208,13 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED"/>
+
                 <category android:name="com.tianyigps.dispatch2"/>
             </intent-filter>
         </receiver>
+
+        <activity android:name=".activity.TestActivity">
+        </activity>
     </application>
 
 </manifest>
