--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,6 @@ dependencies {
     compile files('libs/jcore-android-1.1.6.jar')
     compile 'q.rorbin:badgeview:1.1.2'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-    compile 'me.dm7.barcodescanner:zbar:1.9.7'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -62,4 +61,8 @@ dependencies {
     compile 'com.zxy.android:tiny:0.0.6'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.0.0-alpha1'
+
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
+    compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
 }
