维信订单里，点击旧图，显示大图

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -215,6 +215,8 @@
 
         <activity android:name=".activity.TestActivity">
         </activity>
+        <activity android:name=".activity.ShowPicActivity">
+        </activity>
     </application>
 
 </manifest>
