--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
     <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <!-- <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/> -->
     <!-- 用于读取手机当前的状态 -->
-     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
     <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
     <!-- 访问网络，网络定位需要上网 -->
@@ -54,8 +54,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="JPUSH_APPKEY"
@@ -214,11 +214,15 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.TestActivity"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".activity.TestActivity"
+            android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.ShowPicActivity"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".activity.ShowPicActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".activity.WarnInfoActivity">
         </activity>
     </application>
 
