--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -222,7 +222,8 @@
             android:name=".activity.ShowPicActivity"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.WarnInfoActivity">
+        <activity android:name=".activity.WarnInfoActivity"
+                  android:screenOrientation="portrait">
         </activity>
     </application>
 
