实现服务主任改约添加原因选择

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 29
-        versionName "2.9"
+        versionName "2.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -51,7 +51,7 @@ dependencies {
     compile(name: 'bottomdialog', ext: 'aar')
     compile files('libs/jcore-android-1.1.6.jar')
     compile 'q.rorbin:badgeview:1.1.2'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:26.0.0-beta1'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
