--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
             storePassword '12345678'
         }
     }
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.tianyigps.dispatch2"
@@ -51,15 +51,15 @@ dependencies {
     compile(name: 'bottomdialog', ext: 'aar')
     compile files('libs/jcore-android-1.1.6.jar')
     compile 'q.rorbin:badgeview:1.1.2'
-    compile 'com.android.support:appcompat-v7:26.0.0-beta1'
+    compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:27.1.0'
+    compile 'com.squareup.picasso:picasso:2.71828'
     compile 'com.yanzhenjie:permission:1.0.8'
     compile 'com.zxy.android:tiny:0.0.7'
-    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:design:27.1.0'
     compile 'com.google.zxing:core:3.2.1'
     compile 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
     compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
