实现检修说明原因选择

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.OperateRepairActivity"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.ChoiceWorkerActivity"
