--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile(name: 'signviewlibrary', ext: 'aar')
     compile(name: 'cycleprogressview', ext: 'aar')
     compile(name: 'bottomdialog', ext: 'aar')
+    compile(name: 'dialogutils', ext: 'aar')
     compile files('libs/jcore-android-1.1.6.jar')
     compile 'q.rorbin:badgeview:1.1.2'
     compile 'com.android.support:appcompat-v7:27.1.0'
